# ticket_app

./: .pre-commit-config.yaml  docker-compose.yml
.github/workflows/: testing.yaml
backend/: .coverage  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/.github/workflows/: testing.yaml
backend/alembic/: __init__.py  env.py
backend/alembic/versions/: 0bd1803d7a14_.py  7f1bf0c73c51_.py  __init__.py
backend/scripts/: generate-migration.sh  migrate.sh  run.sh
backend/src/: __init__.py  database.py  helpers.py  main.py  models.py  schemas.py
backend/src/commands/: __init__.py  gen_uuid.py
backend/testing/: __init__.py
backend/testing/fixtures/: database.py
backend/testing/unittests/: test_main.py
backend/testing/unittests/commands/: __init__.py  test_gen_uuid.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: HelloWorld.vue  Login.vue
