[tool.poetry]
name = "nhsf-ticket-app"
version = "0.1.0"
description = "A ticketing app for NHSF"
authors = ["Shivam Patel <shivpatel1306@gmail.com>"]
readme = "README.md"
packages = [{include = "main", from = "src"},
            {include = "database", from = "src"},
            {include = "models", from = "src"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
alembic = "^1.10.4"
sqlalchemy = "^2.0.12"
psycopg2-binary = "^2.9.6"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
isort = "^5"
black = "^22"
pytest = "^7"
mypy = "^0"
flake8 = "^5.0.4"
darglint = "^1.8.1"
pre-commit = "^3.2.2"
httpx = "^0.24.0"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
extend-exclude = '''
/(
    \.git
  | \.idea
  | \.vscode
  | \.venv
)/
'''

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
strict = true
